수정 기능 추가