@@ -5,11 +5,13 @@ import com.ll.exam.sbb.user.SiteUser;
 import com.ll.exam.sbb.user.UserSecurityService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
 import javax.validation.Valid;
 import java.security.Principal;
@@ -44,6 +46,7 @@ public class QuestionController {
     public String questionCreate(QuestionForm questionForm) {
         return "question_form";
     }
+
     @PreAuthorize("isAuthenticated()")
     @PostMapping("/create")
     public String questionCreate(@Valid QuestionForm questionForm, BindingResult bindingResult, Principal principal) {
@@ -54,8 +57,39 @@ public class QuestionController {
 
         int id = questionService.create(questionForm.getSubject(), questionForm.getContent(), siteUser);
 
-        return """
-                redirect:/question/detail/%d
-                """.formatted(id);
+//        return """
+//                redirect:/question/detail/%d
+//                """.formatted(id);
+        return String.format("redirect:/question/detail/%d", id);
+    }
+
+    @PreAuthorize("isAuthenticated()")
+    @GetMapping("/modify/{id}")
+    public String questionModify(QuestionForm questionForm, @PathVariable("id") Integer id, Principal principal) {
+        Question question = questionService.getQuestion(id);
+        if (!question.getAuthor().getUsername().equals(principal.getName())) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "수정권한이 없습니다");
+        }
+        questionForm.setSubject(question.getSubject());
+        questionForm.setContent(question.getContent());
+
+        return "question_form";
+    }
+
+    @PreAuthorize("isAuthenticated()")
+    @PostMapping("/modify/{id}")
+    public String questionModify(@Valid QuestionForm questionForm, BindingResult bindingResult,
+                                 @PathVariable("id") Integer id, Principal principal) {
+        if (bindingResult.hasErrors()) {
+            return "question_form";
+        }
+        Question question = questionService.getQuestion(id);
+        if (!question.getAuthor().getUsername().equals(principal.getName())) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "수정권한이 없습니다");
+        }
+
+        questionService.modify(question, questionForm.getSubject(), questionForm.getContent());
+
+        return String.format("redirect:/question/detail/%d", id);
     }
 }
